# coco

./: .gitignore  README.md
codex-rs/flow/: .gitignore  Cargo.toml  README.md  codex-flow-design.md
codex-rs/flow/.codex-flow/artifacts/architecture/: 01_Context_and_Drivers.md  02_Architecture_Overview.md  03_System_Structure_and_Data.md  04_Behavior_and_Communication.md  05_Operational_Architecture.md  06_Rationale_and_Future.md  architecture_manifest.json
codex-rs/flow/.codex-flow/input/: specification.md
codex-rs/flow/.codex-flow/input/raw/: feature.md
codex-rs/flow/.codex-flow/input/specification/: flow-agent-reasoning-control.md  runtime-agent-state-and-visualization.md
codex-rs/flow/.codex-flow/prompts/agents/: 02-planning-agent.md  (+3 more)
codex-rs/flow/.codex-flow/workflows/: agent-reasoning-upgrade.workflow.toml  architecture.workflow.toml  codex-flow-development.workflow.toml  commit.workflow.toml
codex-rs/flow/docs/adr/: ADR-001-reasoning-trace.md
codex-rs/flow/docs/flow/: resume.md
codex-rs/flow/ops/runbooks/: resume-rollout.md
codex-rs/flow/scripts/: resume-smoke.sh
codex-rs/flow/src/: config.rs  engine.rs  human_renderer.rs  lib.rs  main.rs  runner.rs  scaffold.rs  utils.rs
codex-rs/flow/src/cli/: args.rs  cmd_state.rs  mod.rs  output.rs
codex-rs/flow/src/runner/: migrations.rs  mod.rs  planner.rs  state_store.rs
codex-rs/flow/src/runtime/: config.rs  init.rs  mod.rs  state_store.rs
codex-rs/flow/templates/runtime/: README-state.md
codex-rs/flow/templates/workflows/: codex-flow-development.workflow.toml
codex-rs/flow/tests/: smoke.rs
(+112 files in other folders)
